Fix a line wrap in the dogs controller. Add some styling to the jumbotron in pages.scss to eliminate scrolling.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -4,6 +4,7 @@
 
 .jumbotron {
   background-image: image-url("pups.jpg");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -12,4 +13,6 @@
   color: white;
   padding-left: 20px;
   padding-right: 20px;
+  position: fixed;
+  width: 100%;
 }
